// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should contain target="_blank" when openNewTab is set true 1`] = `
<scale-link href="http://example.com" open-new-tab="true">
  <template shadowrootmode="open">
    <a aria-disabled="false" href="http://example.com" part="anchor">
      <div part="content">
        <slot></slot>
      </div>
      <slot name="icon"></slot>
    </a>
  </template>
  Label
</scale-link>
`;

exports[`Link should handle disabled link 1`] = `
<scale-link class="disabled" disabled="true" href="http://example.com">
  <template shadowrootmode="open">
    <a aria-disabled="true" href="http://example.com" part="anchor" tabindex="-1">
      <div part="content">
        <slot></slot>
      </div>
      <slot name="icon"></slot>
    </a>
  </template>
  Label
</scale-link>
`;

exports[`Link should handle setted styles 1`] = `
<scale-link href="http://example.com" styles="color:red">
  <template shadowrootmode="open">
    <style>
      color:red
    </style>
    <a aria-disabled="false" href="http://example.com" part="anchor">
      <div part="content">
        <slot></slot>
      </div>
      <slot name="icon"></slot>
    </a>
  </template>
  Label
</scale-link>
`;

exports[`Link should have link href value when href value is set 1`] = `
<scale-link href="http://example.com">
  <template shadowrootmode="open">
    <a aria-disabled="false" href="http://example.com" part="anchor">
      <div part="content">
        <slot></slot>
      </div>
      <slot name="icon"></slot>
    </a>
  </template>
  Label
</scale-link>
`;

exports[`Link should match snapshot 1`] = `
<scale-link>
  <template shadowrootmode="open">
    <a aria-disabled="false" part="anchor">
      <div part="content">
        <slot></slot>
      </div>
      <slot name="icon"></slot>
    </a>
  </template>
  default
</scale-link>
`;
